Use java.nio.file.Files instead of commons-io for read/write
Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>